manifests/tealgardens-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tealgardens-com
spec:
  selector:
    app: tealgardens-com
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
