manifests/tealgardens-com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tealgardens-com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tealgardens.com
    secretName: tealgardens-com-tls
  rules:
  - host: tealgardens.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tealgardens-com
            port:
              number: 80
